use R2 CloudFlare for upload file

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,10 @@ ACCESS_TOKEN_EXPIRE_MINUTES=10080 # 7 days
 PAYOS_CLIENT_ID="your_payos_client_id"
 PAYOS_API_KEY="your_payos_api_key"
 PAYOS_CHECKSUM_KEY="your_payos_checksum_key"
+
+# Cloudflare R2 Configuration
+CLOUDFLARE_R2_ACCOUNT_ID=your_r2_account_id
+CLOUDFLARE_R2_ACCESS_KEY_ID=your_r2_access_key_id
+CLOUDFLARE_R2_SECRET_ACCESS_KEY=your_r2_secret_access_key
+CLOUDFLARE_R2_BUCKET_NAME=your_r2_bucket_name
+CLOUDFLARE_R2_PUBLIC_URL="https://pub-<YOUR_ACCOUNT_ID>.r2.dev/<YOUR_BUCKET_NAME>"
