--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "boto3>=1.40.24",
     "fastapi[standard]>=0.116.1",
     "passlib[bcrypt]>=1.7.4",
     "psycopg[binary]>=3.2.9",
